--- a/app/src/main/res/layout/view1.xml
+++ b/app/src/main/res/layout/view1.xml
@@ -4,9 +4,9 @@
     android:layout_height="match_parent"
     android:id="@+id/view1">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="界面1"/>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/view1_recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
