--- a/app/src/main/res/layout/view3.xml
+++ b/app/src/main/res/layout/view3.xml
@@ -5,8 +5,9 @@
     android:id="@+id/view3">
 
     <TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="界面3"/>
+        android:id="@+id/text_view3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="界面3"/>
 
 </LinearLayout>
