--- a/app/src/main/res/layout/contacts_item_view.xml
+++ b/app/src/main/res/layout/contacts_item_view.xml
@@ -21,12 +21,16 @@
         <TextView
             android:id="@+id/contacts_item_user_name"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:textColor="#000000"
+            android:textSize="18sp"/>
 
         <TextView
             android:id="@+id/contacts_item_content"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:maxLines="3"/>
 
     </LinearLayout>
 
