--- a/app/src/main/res/drawable/left_message_box.xml
+++ b/app/src/main/res/drawable/left_message_box.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#ff00ff"/>
+    <solid android:color="@color/white"/>
+
+    <stroke android:width="1dip" android:color="@color/theme_blue"/>
 
     <corners
         android:topLeftRadius="5dp"
