--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -5,22 +5,34 @@
     android:orientation="vertical"
     android:gravity="center">
 
-    <EditText
-        android:id="@+id/user_num"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="账号"
-        android:inputType="text" />
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <EditText
-        android:id="@+id/user_password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="密码"
-        android:inputType="textPassword"/>
+        <EditText
+            android:id="@+id/sign_in_user_num"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="账号"
+            android:inputType="text" />
+
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <EditText
+            android:id="@+id/sign_in_user_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="密码"
+            android:inputType="textPassword"/>
+
+    </android.support.design.widget.TextInputLayout>
 
     <CheckBox
-        android:id="@+id/login_checkbox"
+        android:id="@+id/sign_in_checkbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="记住密码"/>
