--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,9 +47,14 @@
         android:background="#ffffff">
 
         <TextView
+            android:id="@+id/main_myname"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="功能待开发"/>
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/main_mynum"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
