--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,24 +38,12 @@
 
     </android.support.design.widget.CoordinatorLayout>
 
-    <!--侧滑菜单的Layout-->
-    <LinearLayout
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:orientation="vertical"
-        android:background="#ffffff">
-
-        <TextView
-            android:id="@+id/main_myname"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-        <TextView
-            android:id="@+id/main_mynum"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-    </LinearLayout>
+        app:headerLayout="@layout/nav_header"
+        app:menu="@menu/nav_menu"/>
 
 </android.support.v4.widget.DrawerLayout>
