--- a/app/src/main/res/layout/contacts_item_view.xml
+++ b/app/src/main/res/layout/contacts_item_view.xml
@@ -39,10 +39,9 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/contacts_item_content"
+            android:id="@+id/contacts_item_isOnline"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:maxLines="3"/>
+            android:layout_height="wrap_content"/>
 
     </LinearLayout>
 
