--- a/app/src/main/res/layout/activity_talk.xml
+++ b/app/src/main/res/layout/activity_talk.xml
@@ -12,11 +12,18 @@
         android:background="?attr/colorPrimary"
         app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/talk_recyclerview"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/talk_swipeRefresh"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_weight="1">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/talk_recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
